powernap (2.5) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 17 Feb 2011 07:36:26 -0600

powernap (2.4-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * Fix wall message timestamp (LP: #718242)
  * Add powerwake-now support. Sends signal to powernapd to wakeup
    powersave mode if the daemon is in powersave.
  * debian/powernap.upstart: Add pre-stop.
    - Issues 'powerwake-now' to wake up system if stopping while in powersave.
    - Add 'sleep 3' to wait for recover action to take place before actually
      stopping powernapd. Otherwise, it won't recover.
  * bin/powernapd: Set flags back to initial values if GRACE PERIOD completed.
    Ensures that flags have correct values if powerwake-now signal was received.

  [ Dustin Kirkland ]
  * sbin/powernapd: only display wall message if action is other than
    powersave

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 17 Feb 2011 07:36:20 -0600

powernap (2.3-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * config,sbin/powernapd,powernap/powernap.py: New option to decide if
    powernapd will WARN the user via a wall message. Default yes.
  * sbin/powernapd: Use a Timestamp when sending the wall message.
  * InputMonitor now only enables/disables keyboard and mouse monitoring.
    - powernap/monitors/InputMonitor.py: Match regex in /by-id for kbd.
    - powernap/powernap.py: Support only mouse/keyboard
    - config: Only add options for mouse/keyboard.
  * Enabled InputMonitors by default.
    - config: Enable.
    - powernap.py: Only try to initialize if "mouse" or "kbd" are connected
      by looking into /dev/input/by-id.
  * powernapd: Add SIGIO handler. Ignores failure caused when disconnecting
    a monitored USB InputDevice, that caused powernapd to stop running.

  [ Dustin Kirkland ]
  * man/powernap-action.8, man/powernap_calculator.1: fix lintian warnings,
    escpae hyphens
  * debian/control: update package descriptions
