@@ -25,6 +25,7 @@ install: build
 binary-indep: build install
 	dh_testdir -i
 	dh_testroot -i
+	dh_installdirs
 	dh_installdocs -X.bzr -i
 	dh_installman -i
 	dh_lintian
