@@ -1,8 +1,9 @@
 powernap (2.5) unreleased; urgency=low
 
-  * UNRELEASED
+  * Add support to load confs from /etc/powernap/config.d. Added to leverage
+    compatibility with other applications, such as Eucalytpus. (LP: #711587)
 
- -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 17 Feb 2011 07:36:26 -0600
+ -- Andres Rodriguez <andreserl@ubuntu.com>  Mon, 14 Mar 2011 16:55:19 -0400
 
 powernap (2.4-0ubuntu1) natty; urgency=low
 
